infrastructure/base/rook-ceph/dashboard/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rook-ceph-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rook-ceph.${CLUSTER_DOMAIN}`)
      services:
        - name: rook-ceph-mgr-dashboard
          port: 7000
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
  tls:
    certResolver: cloudflare
